# cheb

./: CMakeLists.txt
include/cheb/: Cheb.h
src/: minimal.cpp
tests/: points_test.cpp
